Fix TemplateSyntaxError: add load static to profile_modal partial

--- a/templates/partials/profile_modal.html
+++ b/templates/partials/profile_modal.html
@@ -1,3 +1,4 @@
+{% load static %}
 {# Removed stray duplicated opening photo component div that caused invalid DOM nesting #}
 {# Comprehensive Therapist Profile Modal (lazy-loaded) #}
 <style>
