--- a/templates/partials/therapist_card.html
+++ b/templates/partials/therapist_card.html
@@ -1,7 +1,7 @@
 {% load location_extras %}
 {% load therapist_extras %}
 {# Redesigned Therapist Card: Portrait image column + content + chips + distance overlay #}
-<div x-data="{}" class="relative rounded-2xl shadow-lg mb-10 mx-auto overflow-hidden flex flex-col md:flex-row md:h-[360px]" style="background-color:#FAF9F9; color:#555B6E; width:80%; min-width:280px; max-width:1100px;">
+<div x-data="{}" data-therapist-id="{{ therapist.user.id }}" class="relative rounded-2xl shadow-lg mb-10 mx-auto overflow-hidden flex flex-col md:flex-row md:h-[360px]" style="background-color:#FAF9F9; color:#555B6E; width:80%; min-width:280px; max-width:1100px;">
   {# IMAGE COLUMN (reduced size) #}
   <div class="relative w-full md:w-1/4 md:max-w-[260px] flex md:block md:h-full">
     {% comment %}Image fills column height via flex + object-cover. Use a wrapper to constrain max height to avoid extreme portrait stretching.{% endcomment %}
@@ -81,6 +81,9 @@
         class="get-started-btn font-semibold rounded-lg px-5 py-2.5 cursor-pointer bg-[#116466] text-white hover:bg-[#0d4c4d] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#89B0AE] transition"
         @click="$store.profileModal.open({{ therapist.user.id }})"
       >View Profile</button>
+  {% if therapist.slug %}
+  <a href="/therapists/{{ therapist.slug }}/" class="text-xs font-semibold text-[#116466] underline hover:text-[#0d4c4d] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#89B0AE] rounded px-2 py-1">Open Full Page</a>
+  {% endif %}
   {# Distance pill duplicated previously; now only shown over image #}
     </div>
   </div>
